style.css
/* GENERAL ------------------------------------------------------------------------------------- */

:root
{
    --white: #FFF;
    --grey: #555;
    --red: #B44C4C;
    --fancy_line_height: 8px;
}

*
{
    margin: 0px;
    padding: 0px;
}

body
{
    color: var(--grey);
    font-size: 1rem;
    font-family: 'Roboto', sans-serif;
    text-align: justify;
    word-wrap: break-word;
}

header, main, footer
{
    height: 100vh;
}

/* LINKS --------------------------------------------------------------------------------------- */

a
{
    text-decoration: none;
}

a:visited
{
    color: var(--grey);
}

a:hover
{
    color: var(--red);
}

.a:hover
{
    cursor: pointer;
}

/* BUTTONS ------------------------------------------------------------------------------------- */

#button_shop, .button_buy
{
    border: 1px solid var(--red);
    border-radius: 5px;
}

#button_shop, .button_buy:hover
{
    background-color: var(--white);
    color: var(--red);
}

#button_shop:hover, .button_buy
{
    background-color: var(--red);
    color: var(--white);
}

.button_buy
{
    margin: 15px;
    padding: 8px 40px;
    text-transform: uppercase;
    font-weight: bold;
}

/* HEADER (NAV BAR) ---------------------------------------------------------------------------- */

nav
{
    padding: 10px 30px;
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    align-items: center;
}

nav img
{
    height: 80px;
}

nav ul
{
    margin: 20px;
    list-style-type: none;
    display: flex;
    flex-flow: row wrap;
    align-items: center;
}

nav li
{
    margin: 10px 20px 0 20px;
    padding: 7px;
    font-size: 1.1rem;
    letter-spacing: .3rem;
}

/* HEADER (BODY) ------------------------------------------------------------------------------- */

header .body::before
{
    content: "";
    display: block;
    width: 100%;
    height: var(--fancy_line_height);	
    background-color: var(--red);
}

header .body
{
    height: 100%;
    background: url("../images/background.jpg") no-repeat;
    background-size: cover;
}

h1
{
    margin-left: 40px;
    color: var(--white);
    font-size: 2.7rem;
    font-weight: bold;
    letter-spacing: .5rem;

    position: absolute;
    right: 5%;
    bottom: 20%;
}

h1 span
{
    display: block;
}

h1 span:last-child::before
{
    content: "";
    background-color: var(--white);
    display: inline-block;
    height: var(--fancy_line_height);
    width: 312px;
    margin-bottom: 10px;
    margin-right: 20px;
}

/* RED HEADERS --------------------------------------------------------------------------------- */

h2
{
    background-color: var(--red);
    color: var(--white);
    height: 130px;

    text-transform: uppercase;
    letter-spacing: .7rem;
    font-weight: bold;
    font-size: 1.6rem;

    display: flex;
    align-items: center;
}

main h2
{
    justify-content: flex-start;
    padding-left: 60px;
}

footer h2
{
    justify-content: flex-end;
    padding-right: 60px;
}

/* MAIN & FOOTER ------------------------------------------------------------------------------- */

h3
{
    text-transform: uppercase;
    letter-spacing: .2rem;
    font-weight: bold;
    font-size: 1.1rem;
}

.texts p
{
    line-height: 2.5;
}

/* MAIN (GENERAL) ------------------------------------------------------------------------------ */

main section
{
    padding: 30px 60px 60px 20px;
    display: flex;
    flex-flow: column wrap;
    justify-content: space-between;
}

main div
{
    margin: 0 40px;
}

main h3
{
    margin: 35px 0px;
}

#main_text_1 h3::after
{
    content: "";
    display: inline-block;
    height: var(--fancy_line_height);
    width: 409px;
    background-color: var(--red);
    margin-left: 10px;
    margin-bottom: 3px;
}

#main_text_2 h3::before
{
    content: "";
    display: inline-block;
    height: var(--fancy_line_height);
    width: 445px;
    background-color: var(--red);
    margin-right: 10px;
    margin-bottom: 3px;
}

#main_text_3 h3::after
{
    content: "";
    display: inline-block;
    height: var(--fancy_line_height);
    width: 462px;
    background-color: var(--red);
    margin-left: 10px;
    margin-bottom: 3px;
}

/* MAIN (IMAGES) ------------------------------------------------------------------------------- */

main aside
{
    border: solid red 4px;

    margin: 60px;
    width: 35%;
    height: 80%;

    display: flex;
    flex-flow: column nowrap;
}

#first_row
{
    height: 425px;

    display: flex;
    flex-flow: row nowrap;
}

#first_row img:first-child
{
    margin-right: 7px;
    width: 360px;
}

#first_row img:last-child
{
    margin-left: 7px;
    width: 270px;
}

#second_row img
{
    width: 100%;
    height: 235px;
    margin-top: 14px;
}

/* FOOTER (GENERAL) ---------------------------------------------------------------------------- */

footer .body
{
    display: flex;
    flex-direction: column;
    align-items: center;
}

footer h3
{
    margin: 50px;
    margin-bottom: 30px;
    text-align: center;
}

footer .texts h3::after
{
    content: "";
    display: inline-block;
    height: var(--fancy_line_height);
    width: 200px;
    background-color: var(--red);
    margin-left: 10px;
    margin-bottom: 3px;
}

footer .texts p
{
    width: 700px;
    height: 80px;
    margin-bottom: 20px;
}

/* FOOTER (GUITARS) ---------------------------------------------------------------------------- */

#guitars
{
    width: 1500px;
    display: flex;
    justify-content: space-between;
}

#guitars img
{
    width: 90%;
    margin: auto;
}

#guitars tr
{
    margin: 0px 50px;
    width: 1400px;

    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
}

#guitars td
{
    width: 350px;
    margin: 0px 50px;
    display: flex;
}

#row_names td
{
    display: table;
}

h4
{
    display: table-cell;
    vertical-align: middle;
    text-align: center;

    text-transform: uppercase;
    font-weight: bold;
    letter-spacing: .2rem;
}

#row_prices td
{
    display: flex;
    justify-content: space-around;
}

.price
{
    letter-spacing: .2rem;
}

.old_price
{
    text-decoration: line-through;
}

#row_buttons td
{
    display: flex;
    justify-content: center;
}

